Fixing modernizer